// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component disabled Button 1`] = `
<button
  className="button disabled"
  disabled={true}
>
  TEST
</button>
`;

exports[`Button component disabledClassName prop 1`] = `
<button
  className="button DISABLED_CLASS"
  disabled={true}
>
  TEST
</button>
`;

exports[`Button component recieves className 1`] = `
<button
  className="TEST_CLASS button"
  disabled={false}
>
  TEST
</button>
`;

exports[`Button component renders children 1`] = `
<button
  className="button"
  disabled={false}
>
  TEST
</button>
`;
